# wpfAutoTester

./: .flake8  .gitignore  CLAUDE.md  LICENSE  README.ja.md  README.md  Spec.en.md  Spec.md  personas.json  profiles.json  pyproject.toml  sbom.cdx.json  setup.ps1  wpf_agent.spec
.claude/: settings.json  settings.local.json
.claude/commands/: wpf-click.md  wpf-inspect.md  wpf-random.md  wpf-replay.md  wpf-scenario.md  wpf-setup.md  wpf-ticket.md  wpf-type.md
.claude/hooks/: block-manual-text-ops.sh
.claude/skills/wpf-click/: SKILL.md
.claude/skills/wpf-explore/: SKILL.md
.claude/skills/wpf-inspect/: SKILL.md
.claude/skills/wpf-random/: SKILL.md
.claude/skills/wpf-replay/: SKILL.md
.claude/skills/wpf-scenario/: SKILL.md
.claude/skills/wpf-setup/: SKILL.md
.claude/skills/wpf-test/: SKILL.md
.claude/skills/wpf-ticket/: SKILL.md
.claude/skills/wpf-ticket-create/: SKILL.md
.claude/skills/wpf-ticket-triage/: SKILL.md
.claude/skills/wpf-type/: SKILL.md
.claude/skills/wpf-ui/: SKILL.md
.claude/skills/wpf-usability-test/: SKILL.md
.claude/skills/wpf-verify/: SKILL.md
.github/workflows/: ci.yml
docs/: setup-guide.md  verify-guide.md  wpf-agent-usage.md
scenarios/: GUIDE.md  demo_a_settings.yaml  demo_b_navigation.yaml  random_example.yaml
src/wpf_agent/: __init__.py  __main__.py  _claude_md_snippet.md  cli.py  config.py  constants.py  ui_guard.py
src/wpf_agent/core/: errors.py  safety.py  session.py  target.py
src/wpf_agent/mcp/: server.py  types.py
src/wpf_agent/runner/: agent_loop.py  logging.py  replay.py
src/wpf_agent/testing/: assertions.py  explorer.py  minimizer.py  oracles.py  random_tester.py  scenario.py  verifier.py
src/wpf_agent/tickets/: evidence.py  generator.py  templates.py
src/wpf_agent/uia/: engine.py  screenshot.py  selector.py  snapshot.py  waits.py
testApp/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  TestApp.csproj  verify-spec.yaml
tests/: __init__.py  test_assertions.py  test_cli.py  test_config.py  test_doctor.py  test_engine_drag.py  test_errors.py  test_logging.py  test_safety.py  test_selector.py  test_session.py  test_snapshot.py  test_targeting.py  test_templates.py  test_waits.py
wpfautotester/: __init__.py  cli.py  doctor.py  errors.py  targeting.py
