[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wpfautotester"
version = "0.1.0"
description = "AI-driven WPF UI testing agent integrated with Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "flake8>=6.0",
    "pytest-mock>=3.0",
]

[project.scripts]
wpfautotester = "wpfautotester.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wpfautotester*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.flake8]
max-line-length = 99
exclude = [".git", "__pycache__", "build", "dist"]
